<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/bookmark_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/bookmarks_navigation_menu_item"
            android:title="@string/bookmarks_only"
            app:actionLayout="@layout/action_view_switch" />
    </group>
    <item
        android:id="@+id/settings_navigation_menu_item"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title" />
    <item
        android:id="@+id/about_navigation_menu_item"
        android:icon="@drawable/ic_about"
        android:title="@string/about_title" />

</menu>