<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HN Reader</string>

    <!-- Navigation view -->
    <string name="navigation_view_header_title">Hacker News Reader</string>
    <string name="settings_title">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="bookmarks_only">Bookmarks only</string>

    <string name="no_stories_all">No stories :(</string>

    <string name="transition_story">transition_story</string>

    <string name="loading_stories_error">Error occurred while loading stories</string>

    <string name="top_stories_toolbar_title">Top stories</string>
    <string name="loading">Loading…</string>
    <string name="story_detail_read_original">View original</string>
    <string name="menu_story_comments">Comments</string>
    <string name="story_by">By <xliff:g name="by_author" example="me">%1$s</xliff:g></string>
    <string name="no_data">No data available…</string>
    <string name="comments_toolbar_title">Comments</string>
    <string name="no_comments">No comments</string>
    <string name="share_story_intent_title">Share story</string>
    <string name="pref_key_bookmarked_ony">key_bookmarked_only</string>
    <string name="no_stories_bookmarked">No bookmarked stories :(</string>
    <string name="signIn">Sign in</string>
    <string name="pref_key_account_name">key_account_name</string>
    <string name="signOut">Sign out</string>
    <string name="request_load_signed_in_person">request_load_signe_in_person</string>
    <string name="nav_user_photo">User photo</string>
    <string name="HN">HN</string>
    <string name="navview_header_default_image_content_description">Navigation header</string>
    <string name="api_error_title">Error</string>
    <string name="api_error_message">Error</string>
    <string name="close">Close</string>
    <string name="stories_menu_title_search">Search</string>
    <string name="stories_search_hint">Search for stories…</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_main"><![CDATA[
        <b>Hacker News Reader App</b><br>
        Version %s
    ]]></string>
    <string name="about_title">About</string>
    <string name="about_licenses">Open Source Licenses</string>

    <!-- Permissions -->
    <string name="permissions_read_contacts_title">Read contacts required</string>
    <string name="permissiona_read_contacts_text">In order to add/remove bookmarks you need to grant read contacts permission</string>

    <!-- Notifications -->
    <string name="notif_text_new_stories_available">New stories available!</string>

    <!-- Preferences -->
    <string name="pref_key_revoke" translatable="false">key_revoke</string>
    <string name="pref_revoke_access">Revoke access of HN Reader to your account</string>
    <string name="pref_revoke_access_title">Revoke access</string>

    <string name="pref_key_notify" translatable="false">key_notify</string>
    <string name="pref_notify_summary">Notify about new stories from HN</string>
    <string name="pref_notify_title">Notify about new stories</string>
    <string name="pref_notify_disable">Disable notification on new stories</string>
    <string name="pref_notify_enable">Enable notification on new stories</string>

    <string name="content_authority" translatable="false">com.geaden.android.hackernewsreader.app.provider</string>
    <string name="empty_string">-</string>
</resources>
